immutable-processor/src/test/resources/test/type/error/InterfacePrivate.java
package test.type.error;

import org.example.immutable.Immutable;

public class InterfacePrivate {

    @Immutable
    private interface Inner {}
}
